Add presentation slides and images

--- a/referat/2016-jovanovic-polybius/index.html
+++ b/referat/2016-jovanovic-polybius/index.html
@@ -4,9 +4,9 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Exploring Polybius' syntax with dependency trees</title>
+		<title>Exploring Polybius's syntax with dependency trees</title>
 
-		<meta name="description" content="">
+		<meta name="description" content="To illustrate possibilities of the Ancient Greek and Latin Dependency Treebank, I will provide an overview of the structure of Polybius's sentences in the Book 1. Such an investigation fittingly complements previous interpretations of Polybius's language and linguistic choices, the topics for which, as has been stated recently, “further research is needed”.">
 		<meta name="author" content="Neven Jovanović">
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
@@ -71,30 +71,38 @@
 </section>
 <section>
 					
-  <h2>Croatiae auctores Latini</h2>
-  <p>Currently in CroALa: 5.7 million words, 467 documents, bibliographic data.</p>
-  <p>First edition 2009<br/>ISBN: 978-953-175-356-2</p>
-  <p><a href="http://croala.ffzg.unizg.hr">croala.ffzg.unizg.hr</a> (PhiloLogic 3)
-    <br/>
-    <a href="http://solr.ffzg.hr/philo4/croala0">PhiloLogic 4</a>
-    <br/>
-    <a href="http://croala.ffzg.unizg.hr/basex/croalatituli">BaseX</a>
-    <br/>
-    <a href="https://github.com/nevenjovanovic/croatiae-auctores-latini-textus">Github</a>
-  </p>
-  <p>License: CC-BY.</p>
+  <h2>Polybius in the AGLDT</h2>
+  <p>Currently: <emph>Historiae</emph> 1<br/>
+    <b>1,001</b> sentences; <b>28,271</b> words</p>
+  <p/>
+  <p>The Ancient Greek and Latin Dependency Treebank (AGLDT) is the earliest treebank for Ancient Greek and Latin. The project started at Tufts University in 2006 and is currently developed and maintained at Leipzig University-Tufts University.</p>
+  <p>License: <b>CC-BY</b>.</p>
 </section>
 <section>
-  <h2>A tale of two sets</h2>
-<img src="images/croala-auctores-periodi.png"/>
+  <h1>(Prague) syntactic dependency treebank</h1>
+  <p>A <b>treebank</b> is a parsed text corpus that annotates syntactic or semantic sentence structure.</p>
+  </section>
+<section>
+<img src="img/quranic-arabic-treebank.jpg"/>
 </section>
 <section>
-  <h1>How?</h1>
+  <img src="img/Treebanking-Aesopus.png"/>
 </section>
 <section>
-  <h2>A "black box"?</h2>
-  <p>Our experience of the text is constrained<br/>by print (in a book),<br/>by a concordancer (PhiloLogic),<br/>by a markup model system (TEI XML).</p>
-  <p>Each framework is at the same time a help and an impediment.</p>
+  <h2>Exploring the treebank: which...?</h2>
+  <p>Which syntactic functions are present in Histories 1?</p>
+  <p>(A list of syntactic functions in the AGLDT 2 can be found <a href="https://github.com/PerseusDL/treebank_data/blob/master/AGDT2/guidelines/Greek_guidelines.md#prg_ann">here</a>.)</p>
+</section>
+<section>
+  <h2>Exploring the treebank: how many...?</h2>
+  <p>How many occurrences of each syntactic function is present in Histories 1?</p>
+</section>
+<section>
+  <h2>Exploring the treebank: how...?</h2>
+  <p>How are syntactic functions construed, or configured, in Histories 1?</p>
+  <p>Which configurations are simple, which are complex?</p>
+  <p>Which configurations are more frequent, which are rare?</p>
+
 </section>
 <section>
   <h1>Flight from literature?</h1>
