Correct main link

--- a/referat/2016-jovanovic-polybius/index.html
+++ b/referat/2016-jovanovic-polybius/index.html
@@ -49,7 +49,7 @@
 					  <small>Skopje, 22 November 2016</small>
 					</p>
 <p>
-  Address of this page:<br/><a href="http://croala.ffzg.unizg.hr/2016-croala-aiucd/2016-croala-aiucd.html">croala.ffzg.unizg.hr/2016-jovanovic-polybius/</a>
+  Address of this page:<br/><a href="http://croala.ffzg.unizg.hr/2016-jovanovic-polybius/">croala.ffzg.unizg.hr/2016-jovanovic-polybius/</a>
 					</p>
 				</section>
 
